# quickstart-openshift-backends

./: .gitattributes  .gitignore  README.md  SECURITY.md  docker-compose.yml  renovate.json
.github/workflows/: .deploy.yml  analysis.yml  merge-main.yml  merge.yml  pentests.yml  pr-close.yml  pr-edit.yml  pr-open.yml  pr-validate.yml  tests.yml
backend-go/: Dockerfile  go.mod  go.sum  main.go  openshift.deploy.yml
backend-go/db/: Dockerfile
backend-go/src/: app.go
backend-go/src/database/: connections.go
backend-java/: .dockerignore  Dockerfile  Dockerfile.bkp  README.md  openshift.deploy.yml  pom.xml
backend-py/: Dockerfile  README.md  generate-models.sh  openshift.deploy.yml  pyproject.toml  run-unit-tests.sh  start-local.sh  start-server.sh
backend-py/db/: Dockerfile
backend-py/db/migrations/: V1.0.0__init.sql
backend-py/src/: main.py
backend-py/src/core/: config.py
backend-py/src/db/: session.py
backend-py/src/v1/models/: entities.py  model.py
backend-py/src/v1/repository/: repository.py
backend-py/src/v1/routes/: user_routes.py
backend-py/src/v1/structs/: user.py
backend-py/test/: test_main.py  test_security_headers.py
charts/app/: Chart.yaml  values.yaml
charts/app/templates/: backend-java-knp.yaml  backend-py-knp.yaml  backend-py-secret.yaml  backendGo-knp.yaml  backendGo-secret.yaml  backendJava-knp.yaml  backendJava-secret.yaml  backendPy-knp.yaml  backendPy-secret.yaml  secret.yaml
charts/crunchy/: values.yml
charts/quickstart-openshift-backends/: Chart.yaml  values.yaml
database/: Dockerfile  openshift.deploy.yml
integration-tests/: package-lock.json  package.json
integration-tests/src/: main.js
schemaspy/: index.html
schemaspy/users/: index.html  info-html.txt
(+50 files in other folders)
