[tool.poetry]
name = "backend-py"
version = "0.1.0"
description = "Starter template for Python backend projects"
authors = ["NRIDS"]
readme = "README.md"
packages = [{ include = "backend_python" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.32"
pydantic = {version ="^2.0.0", extras = ["email"]}
requests = "^2.31.0"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.4.0"

[tool.poetry.dev-dependencies]
ruff = "^0.8.0"
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
fail_under = 80

[tool.ruff]
exclude =[
    ".idea",
    "*.sh"
]
line-length=120
lint.fixable=["ALL"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
