[project]
name = "backend-py"
version = "0.1.0"
description = "Starter template for Python backend projects"
authors = [{ name = "NRIDS" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "sqlalchemy>=2.0.32",
    "pydantic[email]>=2.0.0",
    "requests>=2.31.0",
    "psycopg2>=2.9.9",
    "pydantic-settings>=2.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-watch>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.coverage.report]
fail_under = 80

[tool.ruff]
exclude =[
    ".idea",
    "*.sh"
]
line-length=120
lint.fixable=["ALL"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
